--- a/p-mVLmain/css/style.css
+++ b/p-mVLmain/css/style.css
@@ -115,9 +115,7 @@ header {
   display:flex;
   align-items: center;
 }
-.cv {
-  position: absolute;
-}
+
 
 .working-area h1 {
   font-size: 120px;
@@ -188,6 +186,64 @@ header {
 }
 
 /*---CANVAS---*/
+
+.setingsWindowPend1 {
+  display: none;
+  position:absolute;
+  color:#000;
+  padding: 50px;
+  z-index: 1000;
+  top: 50px;
+  left: 50px;
+  border:4px #57738f solid;
+  border-radius: 15px;
+  background-color: #93acc4;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.timeWindow {
+  font-size: 20px;
+  color:#fff;
+  font-weight: bold;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  background: #5f778d;
+  border-radius: 10px;
+ 
+
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  cursor: pointer;
+  
+}
+
+label {
+  font-family: 'Fira Sans', sans-serif;
+  color: #57738f;
+}
+
+.stopBtn {
+  color:#fff;
+  background-color: #57738f;
+  padding: 4px 8px;
+  font-size: 18px;
+  border-radius: 10px;
+}
+
+.stopBtn:hover {
+ color:#f0d800
+}
+
+.stopBtn:active {
+  color: #57738f;
+  background-color: #fff;
+  
+}
 
 .close {
   position: absolute;
