--- a/p-mVLmain/css/style.css
+++ b/p-mVLmain/css/style.css
@@ -187,8 +187,9 @@ header {
 
 /*---CANVAS---*/
 
-.setingsWindowPend1 {
-  display: none;
+
+
+.setingsWindow{
   position:absolute;
   color:#000;
   padding: 50px;
@@ -201,6 +202,18 @@ header {
   flex-direction: column;
   align-items: center;
 
+}
+
+.pendlm1 {
+  display: none;
+}
+
+.pendlm2 {
+  display: none;
+}
+
+.pendlm3 {
+  display: none;
 }
 
 .timeWindow {
